# x3d-stylesheets

./: .gitignore  build.xml
c/: README.md  abstracts.h  concretes.h  scrapeCspecForH.py
cpp/: README.md  abstracts.h  allclasses.cpp  concretes.h  scrapeCPPspecForH.py
csharp/: README.md  abstracts.h  allclasses.cs  concretes.h  scrapeCSspecForH.py
java/: README.txt  X3DJSAIL.html  X3DJSAIL.properties  X3DJSAIL.properties.template  X3dJavaSpecificationChangesAndIssues.txt  build.out.X3DJSAIL.txt  build.xml  index.redirect.html  javadoc.redirect.html  javadoc.website.html  license.html
nbproject/: project.xml
python/: .pylintrc  README.md  build.DeploymentSteps.txt  build.xml  indexPython.redirect.html  python.html  setup.cfg  setup.py
python/documents/: PythonX3dPackageImplementation.pptx
python/examples/: BackgroundCollection.py  BackgroundCollection.x3d  HelloWorld.py  HelloWorld.x3d  HelloWorldPrefixed.py  HelloWorldX3D4.py  HelloWorldX3D4.x3d  MaterialModulator.py  MaterialModulator.x3d  NumpyExample.py  PythonX3dSmokeTests.py  PythonX3dSmokeTestsModel.json  PythonX3dSmokeTestsModel.wrl  PythonX3dSmokeTestsModel.xml  PythonX3dSmokeTestsModelX3DOM.html  README.md
python/jupyter/: HelloJupyterNotebook.ipynb  HelloJupyterNotebook0.ipynb
python/src/: README.md
python/src/x3d.egg-info/: PKG-INFO  SOURCES.txt
test/: Background2Tidy.x3d  CadGeometryExternPrototypes.json  CadGeometryPrototypes.json  CubeWithLabeledSidesViewpointSequencer.json  HelloWorld.java  HelloWorld.json  HelloWorld.meta.md  HelloWorld.metaFlattened.md  HelloWorld.x3d  HelloWorldProgramOutput.json  HelloWorldSignedTidy.x3d  HelloWorldSimpleUrlTidy.x3d  HelloWorldTidy.x3d  OrigamiCranes.json  TestJsonEncoding.json  (+6 more)
(+528 files in other folders)
