# https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
name = x3d
version = 4.0.64.2
author = Don Brutzman
author_email = brutzman@nps.edu
description = Python package support for Extensible 3D Graphics (X3D) International Standard (IS)
download_url = https://www.web3d.org/x3d/stylesheets/python/x3d.py
keywords = X3D, 3D, graphics, Web3D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.web3d.org/x3d/stylesheets/python/python.html
project_urls =
    Bug Tracker = https://sourceforge.net/p/x3d/tickets
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Text Processing :: Markup :: VRML

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6

# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#install-requires
# install_requires = ['re','xmlschema'],
install_requires = xmlschema

[options.packages.find]
where = src
